--- a/index.html
+++ b/index.html
@@ -7,30 +7,19 @@
   <title>Реклама в лифтах Череповца РА "Вегас"</title>
   <meta name="description"
     content="Разместите рекламу в лифтах города Череповца и достигните большей видимости для вашего бизнеса. Охват всех районов, 100% окупаемость.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
   <header id="header" class="header">
-    <!-- <div class="container"> -->
     <div class="container header-container">
-      <!-- <div class="row"></div> -->
-      <!-- <div class="col"></div> -->
       <a href="/"><img src="img/logo.png" alt="logo" class="logo"></a>
-      <!-- <div class="col"></div> -->
       <div class="header-nav">
         <div class="container-nav">
           <div class="header__body">
-            <!-- <div class="header__burger">
-              <span></span>
-            </div> -->
             <nav class="nav">
               <ul class="nav-list">
                 <li class="nav-list-item">
@@ -59,24 +48,6 @@
         <span></span>
       </div>
     </div>
-    <!-- <h1 class="title-first">Реклама в лифтах Череповца</h1>
-    <div class="advantages">
-      <div class="advantages-list">
-        <div class="advantage-item">
-          <img src="./icons/balun.svg" alt="">
-          <span>Охват всех районов города</span>
-        </div>
-        <div class="advantage-item">
-          <img src="./icons/lift.svg" alt="">
-          <span>1000 лифтов</span>
-        </div>
-        <div class="advantage-item">
-          <img src="./icons/foto.svg" alt="">
-          <span>Фотоотчет 100%</span>
-        </div>
-      </div>
-    </div> -->
-    <!-- </div> -->
   </header>
 
   <!-- main -->
@@ -145,13 +116,17 @@
           <br>
           Изготовление плакатов тиражом 500 шт.- 10 000 руб.
         </p>
-        <a class="bussiness-card">
-          <img src="img/lift.jpg" alt="bussiness card">
-        </a>
+        <div class="price__wrapper" style="display: block;" >
+          <a href="img/lift.jpg" data-fancybox="gallery" class="fancybox">
+            <img src="img/lift.jpg" class="bussiness_card"  alt="bussiness card">
+          </a>
+        </div>
       </div>
     </section>
 
-    <div id="map" class="map"></div>
+    <section>
+      <div id="map" class="map"></div>
+    </section>
 
     <section class="section section-plus">
       <h2 class="plus-title" id="plus"><span>Плюсы рекламы</span></h2>
@@ -319,9 +294,9 @@
     </section>
   </footer>
 
-  <!-- </div> -->
   <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
-  <!-- <script src="/libs/jquery/jquery-3.7.1.min.js"></script> -->
+  <script src="jquery-3.7.1.min.js" type="text/javascript"></script>
+  <script src="jquery.fancybox.min.js" type="text/javascript"></script>
   <script src="main.js"></script>
 </body>
 
